--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
   http: 0.13.5
-  cached_network_image: ^3.2.1
-  flutter_rating_bar: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,8 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
+  #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
