--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,13 @@ dependencies:
   http: 0.13.5
   cached_network_image: ^3.2.1
   flutter_rating_bar: ^4.0.1
+  cloud_firestore: ^4.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
