--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_rating_bar: ^4.0.1
   cloud_firestore: ^4.1.0
+  firebase_auth: ^4.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
