--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   cloud_firestore: ^4.1.0
   firebase_auth: ^4.1.5
+  email_validator: ^2.1.17
 
 
   # The following adds the Cupertino Icons font to your application.
